# optimalpartitioning

./: .gitignore  CMakeLists.txt  README.md  build-and-test.sh  build.sh  clean.sh  howto.ipynb  setup.py
include/: costs.h  linalg.h  op.h
src/: op2D_R.cpp  pybind_def.cpp
test/: CMakeLists.txt  op2D_example.cpp  op2D_test.cpp  op2D_test.py  sample_data.txt  test_tools.hpp
